gcc problem