@@ -1,6 +1,8 @@
 plugins {
+    id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.13'
+    id 'org.beryx.jlink' version '2.25.0'
 }
 
 repositories {
@@ -8,21 +10,51 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.openjfx:javafx-controls:21'
-    implementation 'org.openjfx:javafx-fxml:21'
+    implementation 'org.openjfx:javafx-controls:17.0.6'
+    implementation 'org.openjfx:javafx-fxml:17.0.6'
 }
 
 application {
-    mainClass = 'com.yourpackage.Main'
-    mainModule = 'com.yourpackage'
+    mainModule = 'com.yourpackage' // Make sure this matches your module name
+    mainClass = 'com.yourpackage.Main' // Use the full path to your main class
 }
 
 javafx {
-    version = '21'
+    version = "17.0.6"
     modules = ['javafx.controls', 'javafx.fxml']
 }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs << "-Xlint:deprecation"
+jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'NetworkAttackSimulator'
+    }
+    jpackage {
+        if (org.gradle.internal.os.OperatingSystem.current().windows) {
+            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+        }
+    }
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+    options.compilerArgs += ["-Xlint:unchecked", "-Xlint:deprecation", "--add-modules", "javafx.controls,javafx.fxml"]
+}
+
+run {
+    systemProperty "java.library.path", file("native").absolutePath
+}
+
+task copyNativeLibs(type: Copy) {
+    from 'src/main/cpp'
+    into 'native'
+    include '*.dll'
+}
+
+run.dependsOn copyNativeLibs
